# rules_typst

./: .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE.bazel  version.bzl
.bcr/: metadata.template.json  source.template.json
.github/: release_notes.template
.github/workflows/: bcr-publish.yaml  ci.yaml  release.yaml
examples/: BUILD.bazel  MODULE.bazel  example.typ
examples/tools/: generate_svgs.py
typst/: extensions.bzl  typst.bzl  typst_toolchain.bzl
typst/private/: providers.bzl  toolchain.bzl  typst.bzl
typst/private/process_wrapper/: BUILD.bazel  process_wrapper.rs
typst/private/tests/: BUILD.bazel
typst/private/tests/simple/: BUILD.bazel
