load("@bazel_lib//lib:write_source_files.bzl", "write_source_file")
load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@bazel_skylib//rules:run_binary.bzl", "run_binary")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_typst//typst:typst.bzl", "typst")

filegroup(
    name = "smile_source",
    srcs = ["assets/source/smile.svg"],
)

copy_file(
    name = "frown",
    src = ":smile_source",
    out = "assets/derived/frown.svg",
)

py_binary(
    name = "generate_svgs",
    srcs = ["tools/generate_svgs.py"],
    main = "tools/generate_svgs.py",
)

run_binary(
    name = "generated_svg_set",
    outs = [
        "generated/python/diamond.svg",
        "generated/python/stripes.svg",
    ],
    args = [
        "$(location generated/python/diamond.svg)",
        "$(location generated/python/stripes.svg)",
    ],
    tool = ":generate_svgs",
)

typst(
    name = "example",
    src = "example.typ",
    data = [
        ":frown",
        ":generated_svg_set",
        ":smile_source",
    ],
)

write_source_file(
    name = "write_example_pdf",
    diff_test = True,
    in_file = ":example",
    out_file = "generated/source_sync/example.pdf",
)

build_test(
    name = "example_build_test",
    targets = [":example"],
)
