"""rules_typst examples"""

module(
    name = "rules_typst_examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_typst", version = "0.0.0")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = "bazel_lib")

local_path_override(
    module_name = "rules_typst",
    path = "..",
)
