load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("//typst:typst.bzl", "typst")

filegroup(
    name = "smile",
    srcs = ["smile.svg"],
)

copy_file(
    name = "frown",
    src = ":smile",
    out = "frown.svg",
)

typst(
    name = "simple",
    src = "simple.typ",
    data = [
        ":frown",
        ":smile",
    ],
)

build_test(
    name = "build_test",
    targets = [
        ":simple",
    ],
)
